Ensure text remains visible during webfont load

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -1,11 +1,12 @@
 .font-face(@font-family, @filepath, @font-weight, @font-style) {
   @font-face {
     font-family: @font-family;
+    font-style: @font-style;
+    font-weight: @font-weight;
     src: url("@{filepath}.woff2") format("woff2"),
       url("@{filepath}.woff") format("woff"),
       url("@{filepath}.ttf") format("truetype");
-    font-weight: @font-weight;
-    font-style: @font-style;
+    font-display: swap;
   }
 }
 
